alignment fixed

--- a/express/fullstack-webpage/client/source/styles/Register.sass
+++ b/express/fullstack-webpage/client/source/styles/Register.sass
@@ -31,3 +31,7 @@
                 margin-top: 10px
                 font-size: 17px
                 cursor: pointer
+            .password-tag
+                display: flex
+                align-items: center
+                
